--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Конкурс</title>
   <link href="./pages/index.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="vendor/count/jquery.countdown.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -49,9 +50,18 @@
             </div>
         </header>
 
-        <section class="counter"></section>
-
         <section id="promo" class="promo">
+            <div class="counter">
+                <ul id="example" class="counter">
+                    <li class="unit"><span class="days">00</span><p class="days_text">дней</p></li>
+                    <!--<li class="seperator">:</li>-->
+                    <li class="unit"><span class="hours">00</span><p class="hours_text">часов</p></li>
+                    <!--<li class="seperator">:</li>-->
+                    <li class="unit"><span class="minutes">00</span><p class="minutes_text">минут</p></li>
+                    <!--<li class="seperator">:</li>-->
+                    <li class="unit"><span class="seconds">00</span><p class="seconds_text">секунд</p></li>
+                </ul>
+            </div>
             <h1 class="promo__title">Конкурс профессионального мастерства<br /> "Московские мастера"<br /> по профессии «Психолог»</h1>
             <a class="promo__button" href="">Подробнее</a>
             <p class="promo__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at leo vulputate, vestibulum sapien fringilla, vehicula risus. Vivamus sagittis libero ac lorem aliquam, eu interdum tortor condimentum. Nulla posuere dui vel vulputate suscipit. Praesent finibus dolor a rutrum iaculis. Nulla facilisi. Fusce mattis mauris sed mi ultrices euismod. Vestibulum eget mattis arcu. In accumsan rhoncus lectus vel iaculis.</p>
@@ -98,6 +108,23 @@
 	});
 });
     </script>
+    <script class="source" type="text/javascript">
+		var now = new Date();
+		var day = now.getDate();
+		var month = now.getMonth() + 1;
+		var year = now.getFullYear() + 1;
 
+		var nextyear = month + '/' + day + '/' + year + ' 07:07:07';
+
+		$('#example').countdown({
+			date: '09/23/2020 10:00:00', // TODO Date format: 07/27/2017 17:00:00
+			offset: +3, // TODO Your Timezone Offset
+			day: 'день',
+			days: 'дней',
+			hideOnComplete: true
+		}, function (container) {
+			alert('Done!');
+		});
+    </script>
 </body>
 </html>
