--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <section id="promo" class="promo">
             <div class="counter">
                 <ul id="example" class="counter">
-                    <li class="unit"><span class="days">00</span><p class="days_text">дней</p></li>
+                    <li class="unit"><span class="days date">00</span><p class="days_text text">дней</p></li>
                     <!--<li class="seperator">:</li>-->
-                    <li class="unit"><span class="hours">00</span><p class="hours_text">часов</p></li>
+                    <li class="unit"><span class="hours date">00</span><p class="hours_text text">часов</p></li>
                     <!--<li class="seperator">:</li>-->
-                    <li class="unit"><span class="minutes">00</span><p class="minutes_text">минут</p></li>
+                    <li class="unit"><span class="minutes date">00</span><p class="minutes_text text">минут</p></li>
                     <!--<li class="seperator">:</li>-->
-                    <li class="unit"><span class="seconds">00</span><p class="seconds_text">секунд</p></li>
+                    <li class="unit"><span class="seconds date">00</span><p class="seconds_text text">секунд</p></li>
                 </ul>
             </div>
             <h1 class="promo__title">Конкурс профессионального мастерства<br /> "Московские мастера"<br /> по профессии «Психолог»</h1>
