--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
             <div class="header__content">
                 <a href="#home"><img class="header__logo" src="images/logo-img.svg" alt="Лого" /></a>
                 <ul class="header__nav">
-                    <li class="header__nav-item"><a class="header__nav-link" href="#promo">Информация</a></li>
+                    <li class="header__nav-item"><a class="header__nav-link" href="#home"><i class="fas fa-home"></i></a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#info">Регистрация</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#history">История</a></li>
-                    <li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
+                    <li class="header__nav-item"><a class="header__nav-link" href="#contacts">Информация</a></li>
+                    <!--<li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="">Партнеры</a></li>
-                    <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>
+                    <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>-->
                 </ul>
                 <div class="menu">
                     <a class="menu-triger" href="#">
-                        <svg class="ham hamRotate180 ham5" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
+                        <svg class="ham hamRotate180 ham5" viewBox="0 0 100 100" width="60" onclick="this.classList.toggle('active')">
                             <path
                                   class="line top"
                                   d="m 30,33 h 40 c 0,0 8.5,-0.68551 8.5,10.375 0,8.292653 -6.122707,9.002293 -8.5,6.625 l -11.071429,-11.071429" />
@@ -41,12 +42,13 @@
                     </a>
                     <div class="menu-popup">
                         <ul>
-                            <li class="header__nav-item"><a class="header__nav-link" href="#promo">Информация</a></li>
+                            <li class="header__nav-item"><a class="header__nav-link" href="#home"><i class="fas fa-home"></i></a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#info">Регистрация</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#history">История</a></li>
-                            <li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
+                            <li class="header__nav-item"><a class="header__nav-link" href="#contacts">Информация</a></li>
+                            <!--<li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="">Партнеры</a></li>
-                            <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>
+                            <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>-->
                         </ul>						
                     </div>
                 </div>
@@ -88,8 +90,9 @@
                         <div class="info__block-part">
                             <p class="info__block-subtitle">Зарегистрироваться на мероприятие</p>
                             <p class="info__block-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam orci dui, fringilla nec turpis non, malesuada scelerisque metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vel interdum ex. Fusce posuere eget augue fringilla laoreet. Nunc at viverra dolor. Nullam neque ipsum, condimentum eu scelerisque vulputate, bibendum eu est. Ut elementum, eros quis blandit tempus, leo eros fringilla tellus, in molestie nisl lorem nec augue. Nam tincidunt efficitur egestas. Nunc sodales, leo sed blandit pulvinar, libero ligula vehicula nisl, non facilisis mauris lectus id elit. Etiam ante velit, elementum non aliquam sit amet, egestas sit amet dui. Quisque eget posuere enim. Sed porttitor lorem sapien, et tristique quam molestie nec. Etiam pharetra turpis id vestibulum posuere. Nullam quam mauris, pharetra sit amet mattis sed, tempor eget mauris.
+                                Вы можете зарегистрировать в качестве зрителя. <span class="info__block-paragraph_alert">Внимание!</span> <strong>Количество участников ограничено!</strong>
                             </p>
+                            <a class="info__button" href="http://b68448.vr.mirapolis.ru/mira/s/LUQc0s" target="_blank">Стать зрителем</a>
                         </div>
                     </div>
                 </div>
@@ -140,11 +143,13 @@
 
         <section class="partners"></section>
 
+        <section id="contacts" class="contacts"></section>
+
         <footer class="footer">
             <div class="footer__content">
                 <img class="footer__logo" src="images/logo_light.svg" alt="Лого">
+                <p class="footer__copy">&copy; 2020, Государственное бюджетное учреждение «Московская служба психологической помощи населению» Департамента труда и социальной защиты населения города Москвы</p>
             </div>
-            <p class="footer__copy">Государственное бюджетное учреждение «Московская служба психологической помощи населению» Департамента труда и социальной защиты населения города Москвы</p>
         </footer>
     </div>
 
