--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <section class="partners"></section>-->
 
         <section id="contacts" class="info__block">
-            <img class="info__block-image" src="./images/start.svg" alt="Старт" /> 
+            <img class="info__block-image" src="./images/info.svg" alt="Инфо" /> 
             <div class="info__block-content">
                 <h2 class="info__block-title">Информация</h2>
                 <div class="info__block-area">
