--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                     <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
-                    <!--<li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
-                    <li class="header__nav-item"><a class="header__nav-link" href="">Партнеры</a></li>
-                    <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>-->
                 </ul>
                 <div class="menu">
                     <a class="menu-triger" href="#">
@@ -48,9 +45,6 @@
                             <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
-                            <!--<li class="header__nav-item"><a class="header__nav-link" href="">Поддержка СМИ</a></li>
-                            <li class="header__nav-item"><a class="header__nav-link" href="">Партнеры</a></li>
-                            <li class="header__nav-item"><a class="header__nav-link" href="">Контакты</a></li>-->
                         </ul>						
                     </div>
                 </div>
@@ -67,7 +61,7 @@
                         <li class="unit"><span class="seconds date">00</span><p class="seconds_text text">секунд</p></li>
                     </ul>
                 </div>
-                <h1 class="promo__title">Конкурс профессионального мастерства<br /> "Московские мастера"<br /> по профессии «Психолог»</h1>
+                <h1 class="promo__title">Конкурс профессионального мастерства<br /> «Московские мастера»<br /> по профессии «Психолог»</h1>
                 <a class="promo__button" href="#promo-more" rel="modal:open">Подробнее</a>
                 <p class="promo__paragraph">За звание лучшего психолога Москвы поборются профессионалы из организаций столицы.
                     В сентябре пройдет отборочный этап конкурса «Московские мастера» по профессии «Психолог», а в октябре мы узнаем имена финалистов.
@@ -92,7 +86,7 @@
                         <div class="info__block-part">
                             <p class="info__block-subtitle">Зарегистрироваться на мероприятие</p>
                             <p class="info__block-paragraph">
-                                Вы можете зарегистрировать в качестве зрителя. <span class="info__block-paragraph_alert">Внимание!</span> <strong>Количество участников ограничено!</strong>
+                                Вы можете зарегистрироваться в качестве зрителя. <span class="info__block-paragraph_alert">Внимание!</span> <strong>Количество участников ограничено!</strong>
                             </p>
                             <a class="info__button" href="http://b68448.vr.mirapolis.ru/mira/s/LUQc0s" target="_blank">Стать зрителем</a>
                         </div>
@@ -100,27 +94,13 @@
                 </div>
             </section>
 
-            <hr class="info__line">
+            <!--<hr class="info__line">-->
 
             <section id="_final" class="info__block info__block_order-back">
                 <img class="info__block-image" src="./images/final.svg" alt="Финал" /> 
                 <div class="info__block-content">
                     <h2 class="info__block-title">Финальный этап</h2>
                     <p class="info__block-date">21.10.2020</p>
-                    <!--<div class="info__block-area">
-                        <div class="info__block-part">
-                            <p class="info__block-subtitle">Порядок проведения</p>
-                            <p class="info__block-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam orci dui, fringilla nec turpis non, malesuada scelerisque metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vel interdum ex. Fusce posuere eget augue fringilla laoreet. Nunc at viverra dolor. Nullam neque ipsum, condimentum eu scelerisque vulputate, bibendum eu est. Ut elementum, eros quis blandit tempus, leo eros fringilla tellus, in molestie nisl lorem nec augue. Nam tincidunt efficitur egestas. Nunc sodales, leo sed blandit pulvinar, libero ligula vehicula nisl, non facilisis mauris lectus id elit. Etiam ante velit, elementum non aliquam sit amet, egestas sit amet dui. Quisque eget posuere enim. Sed porttitor lorem sapien, et tristique quam molestie nec. Etiam pharetra turpis id vestibulum posuere. Nullam quam mauris, pharetra sit amet mattis sed, tempor eget mauris.
-                            </p>
-                        </div>
-                        <div class="info__block-part">
-                            <p class="info__block-subtitle">Зарегистрироваться на мероприятие</p>
-                            <p class="info__block-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam orci dui, fringilla nec turpis non, malesuada scelerisque metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vel interdum ex. Fusce posuere eget augue fringilla laoreet. Nunc at viverra dolor. Nullam neque ipsum, condimentum eu scelerisque vulputate, bibendum eu est. Ut elementum, eros quis blandit tempus, leo eros fringilla tellus, in molestie nisl lorem nec augue. Nam tincidunt efficitur egestas. Nunc sodales, leo sed blandit pulvinar, libero ligula vehicula nisl, non facilisis mauris lectus id elit. Etiam ante velit, elementum non aliquam sit amet, egestas sit amet dui. Quisque eget posuere enim. Sed porttitor lorem sapien, et tristique quam molestie nec. Etiam pharetra turpis id vestibulum posuere. Nullam quam mauris, pharetra sit amet mattis sed, tempor eget mauris.
-                            </p>
-                        </div>
-                    </div>-->
                 </div>
             </section>
 
@@ -203,6 +183,10 @@
         <p class="promo__modal-paragraph">Соколова И.В. – начальник отдела проектного менеджмента ГБУ МСППН, секретарь организационного комитета 
     </div>
 
+    <div id="totop">
+        <div class="totop"><i class="fas fa-arrow-circle-up fa-3x"></i></div>
+    </div>
+
     <script>
         $(function() {
             var $menu_popup = $('.menu-popup');
@@ -278,6 +262,22 @@
             }
         });
     </script>
+
+<script type="text/javascript">
+    $(function() {
+    $(window).scroll(function() {
+    if($(this).scrollTop() != 0) {
+    $('#totop').fadeIn();
+    } else {
+    $('#totop').fadeOut();
+    }
+    });
+    $('#totop').click(function() {
+    $('body,html').animate({scrollTop:0},700);
+    });
+    });
+    </script>
+
     <script src="./vendor/revelator/fm.revealator.jquery.js"></script>
 
 </body>
