--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img class="info__block-image" src="./images/final.svg" alt="Финал" /> 
                 <div class="info__block-content">
                     <h2 class="info__block-title">Финальный этап</h2>
-                    <p class="info__block-date">21.10.2020</p>
+                    <p class="info__block-date">Октябрь 2020</p>
                 </div>
             </section>
 
