--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="_home" class="wrapper">
         <header class="header">
             <div class="header__content">
-                <a href="#home"><img class="header__logo" src="images/logo-img.svg" alt="Лого" /></a>
+                <a href="#_home"><img class="header__logo" src="images/logo-img.svg" alt="Лого" /></a>
                 <ul class="header__nav">
                     <li class="header__nav-item"><a class="header__nav-link" href="#_home"><i class="fas fa-home"></i></a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_start">Отборочный этап</a></li>
