--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </header>
 
         <section id="_promo" class="promo">
+            <div class="promo__overlay"></div>
             <div class="promo__content">
                 <div class="counter">
                     <ul id="example" class="counter">
