--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     <div class="info__block-part">
                         <p class="info__block-subtitle">Конкурс</p>
                         <a class="info__block-link info__block-link_space" href="#content" rel="modal:open">Организационный комитет Конкурса</a>
-                        <a class="info__block-link info__block-link_space" href="./media/docs/order.pdf" target="_blank">Приказ Департамента труда и социальной защиты города Москвы №318к от 04 марта 2020 года "О проведении конкурса профессионального мастерства "Московские мастера" по профессии "Психолог""</a>
-                        <a class="info__block-link" href="./media/docs/condition.pdf" target="_blank">Положение о проведении конкурса профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
-                        
+                        <a class="info__block-link info__block-link_space" href="./media/docs/order.pdf" target="_blank">Приказ о проведении Конкурса профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
+                        <a class="info__block-link info__block-link_space" href="./media/docs/condition_psy.pdf" target="_blank">Положение о конкурсе профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
+                        <a class="info__block-link" href="./media/docs/condition_mos.pdf" target="_blank">Положение о конкурсе "Московские мастера"</a>
                     </div>
                 </div>
             </div>
