--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <div class="info__block-area">
                     <div class="info__block-part">
                         <p class="info__block-subtitle">Контакты</p>
-                        <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-envelope-open fa-2x" style="padding-right: 20px; opacity: 0.7;"></i>konkurs@msph.ru</p>
-                        <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-phone fa-2x" style="padding-right: 20px; opacity: 0.7;"></i>+7 (499) 796-25-10</p>
+                        <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-envelope-open" style="padding-right: 20px; opacity: 0.7;"></i>konkurs@msph.ru</p>
+                        <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-phone" style="padding-right: 20px; opacity: 0.7;"></i>+7 (499) 796-25-10</p>
                         <p class="info__block-paragraph info__block-paragraph_info" style="padding-left: 58px;">+7 (499) 177-73-65</p>
                     </div>
                     <div class="info__block-part">
@@ -171,19 +171,19 @@
 
     <!--Second-->
     <div id="content" class="modal">
-        <p class="promo__modal-paragraph">Грачева О.Е. – первый заместитель руководителя Департамента труда и социальной защиты населения города Москвы, председатель организационного комитета
-        <p class="promo__modal-paragraph">Петроченко Н.А. – директор ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Михайличенко Г.И. – директор ГБУ ПВВ «Коньково» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Овсянников С.П. – начальник Управления государственной службы, кадровой и правовой работы Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Сокорева И.Е. – начальник Управления кадровой политики и образования Департамента здравоохранения города Москвы 
-        <p class="promo__modal-paragraph">Чернов Никита Владимирович – заведующий отделением психотерапевтической помощи и социальной реабилитации ГКБ №1 им. Н.А. Алексеева
-        <p class="promo__modal-paragraph">Паршина Наталья Леонидовна – начальник отдела по взаимодействию с общественностью ГБУ «Городской психолого-педагогический центр» Департамента образования города Москвы 
-        <p class="promo__modal-paragraph">Сырникова Б.А. – директор ГБУ «Научно-практический реабилитационный центр» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Меньшов В.А. – директор ГБУ ЦССВ «Наш дом» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Понамарева И.Н. – директор ГБУ ЦСПСиД САО г. Москвы Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Еремичев А.В. – заместитель директора ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Сытникова Г.В. – председатель Территориальной Профсоюзной Организации учреждений социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph">Соколова И.В. – начальник отдела проектного менеджмента ГБУ МСППН, секретарь организационного комитета 
+        <p class="promo__modal-paragraph"><strong>Грачева О.Е.</strong> – первый заместитель руководителя Департамента труда и социальной защиты населения города Москвы, председатель организационного комитета
+        <p class="promo__modal-paragraph"><strong></strong>Петроченко Н.А.</strong> – директор ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Михайличенко Г.И.</strong> – директор ГБУ ПВВ «Коньково» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Овсянников С.П.</strong> – начальник Управления государственной службы, кадровой и правовой работы Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Сокорева И.Е.</strong> – начальник Управления кадровой политики и образования Департамента здравоохранения города Москвы 
+        <p class="promo__modal-paragraph"><strong></strong>Чернов Н.В.</strong> – заведующий отделением психотерапевтической помощи и социальной реабилитации ГКБ №1 им. Н.А. Алексеева
+        <p class="promo__modal-paragraph"><strong></strong>Паршина Н.Л.</strong> – начальник отдела по взаимодействию с общественностью ГБУ «Городской психолого-педагогический центр» Департамента образования города Москвы 
+        <p class="promo__modal-paragraph"><strong></strong>Сырникова Б.А.</strong> – директор ГБУ «Научно-практический реабилитационный центр» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Меньшов В.А.</strong> – директор ГБУ ЦССВ «Наш дом» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Понамарева И.Н.</strong> – директор ГБУ ЦСПСиД САО г. Москвы Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Еремичев А.В.</strong> – заместитель директора ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Сытникова Г.В.</strong> – председатель Территориальной Профсоюзной Организации учреждений социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong></strong>Соколова И.В.</strong> – начальник отдела проектного менеджмента ГБУ МСППН, секретарь организационного комитета 
     </div>
 
     <div id="totop">
