--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                         <p class="info__block-subtitle">Конкурс</p>
                         <a class="info__block-link info__block-link_space" href="#content" rel="modal:open">Организационный комитет Конкурса</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/order.pdf" target="_blank">Приказ о проведении Конкурса профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
+                        <a class="info__block-link info__block-link_space" href="./media/docs/decision.pdf" target="_blank">Комитет общественных связей и молодежной политики города Москвы - Информационное письмо</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/condition_psy.pdf" target="_blank">Положение о конкурсе профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
                         <a class="info__block-link" href="./media/docs/condition_mos.pdf" target="_blank">Положение о конкурсе "Московские мастера"</a>
                     </div>
