--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <p class="info__block-paragraph info__block-paragraph_info" style="padding-left: 58px;">+7 (499) 177-73-65</p>
                     </div>
                     <div class="info__block-part">
-                        <p class="info__block-subtitle">Конкурс</p>
+                        <p class="info__block-subtitle">Документы</p>
                         <a class="info__block-link info__block-link_space" href="#content" rel="modal:open">Организационный комитет Конкурса</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/order.pdf" target="_blank">Приказ о проведении Конкурса профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/decision.pdf" target="_blank">Комитет общественных связей и молодежной политики города Москвы - Информационное письмо</a>
