--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <p class="info__block-subtitle">Контакты</p>
                         <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-envelope-open" style="padding-right: 20px; opacity: 0.7;"></i>konkurs@msph.ru</p>
                         <p class="info__block-paragraph info__block-paragraph_info"><i class="fas fa-phone" style="padding-right: 20px; opacity: 0.7;"></i>+7 (499) 796-25-10</p>
-                        <p class="info__block-paragraph info__block-paragraph_info" style="padding-left: 58px;">+7 (499) 177-73-65</p>
+                        <p class="info__block-paragraph info__block-paragraph_info" style="padding-left: 40px;">+7 (499) 177-73-65</p>
                     </div>
                     <div class="info__block-part">
                         <p class="info__block-subtitle">Документы</p>
@@ -142,7 +142,8 @@
                         <a class="info__block-link info__block-link_space" href="./media/docs/order.pdf" target="_blank">Приказ о проведении Конкурса профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/decision.pdf" target="_blank">Комитет общественных связей и молодежной политики города Москвы - Информационное письмо</a>
                         <a class="info__block-link info__block-link_space" href="./media/docs/condition_psy.pdf" target="_blank">Положение о конкурсе профессионального мастерства "Московские мастера" по профессии "Психолог"</a>
-                        <a class="info__block-link" href="./media/docs/condition_mos.pdf" target="_blank">Положение о конкурсе "Московские мастера"</a>
+                        <a class="info__block-link info__block-link_space" href="./media/docs/condition_mos.pdf" target="_blank">Положение о конкурсе "Московские мастера"</a>
+                        <a class="info__block-link" href="./media/docs/protocol.pdf" target="_blank">Протокол заседания организационного комитета конкурса "Московские мастера" по профессии "Психолог" от 08.09.20</a>
                     </div>
                 </div>
             </div>
