--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
     <!--Second-->
     <div id="content" class="modal">
         <p class="promo__modal-paragraph"><strong>Грачева О.Е.</strong> – первый заместитель руководителя Департамента труда и социальной защиты населения города Москвы, председатель организационного комитета
-        <p class="promo__modal-paragraph"><strong></strong>Петроченко Н.А.</strong> – директор ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Михайличенко Г.И.</strong> – директор ГБУ ПВВ «Коньково» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Овсянников С.П.</strong> – начальник Управления государственной службы, кадровой и правовой работы Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Сокорева И.Е.</strong> – начальник Управления кадровой политики и образования Департамента здравоохранения города Москвы 
-        <p class="promo__modal-paragraph"><strong></strong>Чернов Н.В.</strong> – заведующий отделением психотерапевтической помощи и социальной реабилитации ГКБ №1 им. Н.А. Алексеева
-        <p class="promo__modal-paragraph"><strong></strong>Паршина Н.Л.</strong> – начальник отдела по взаимодействию с общественностью ГБУ «Городской психолого-педагогический центр» Департамента образования города Москвы 
-        <p class="promo__modal-paragraph"><strong></strong>Сырникова Б.А.</strong> – директор ГБУ «Научно-практический реабилитационный центр» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Меньшов В.А.</strong> – директор ГБУ ЦССВ «Наш дом» Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Понамарева И.Н.</strong> – директор ГБУ ЦСПСиД САО г. Москвы Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Еремичев А.В.</strong> – заместитель директора ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Сытникова Г.В.</strong> – председатель Территориальной Профсоюзной Организации учреждений социальной защиты населения города Москвы
-        <p class="promo__modal-paragraph"><strong></strong>Соколова И.В.</strong> – начальник отдела проектного менеджмента ГБУ МСППН, секретарь организационного комитета 
+        <p class="promo__modal-paragraph"><strong>Петроченко Н.А.</strong> – директор ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Михайличенко Г.И.</strong> – директор ГБУ ПВВ «Коньково» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Овсянников С.П.</strong> – начальник Управления государственной службы, кадровой и правовой работы Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Сокорева И.Е.</strong> – начальник Управления кадровой политики и образования Департамента здравоохранения города Москвы 
+        <p class="promo__modal-paragraph"><strong>Чернов Н.В.</strong> – заведующий отделением психотерапевтической помощи и социальной реабилитации ГКБ №1 им. Н.А. Алексеева
+        <p class="promo__modal-paragraph"><strong>Паршина Н.Л.</strong> – начальник отдела по взаимодействию с общественностью ГБУ «Городской психолого-педагогический центр» Департамента образования города Москвы 
+        <p class="promo__modal-paragraph"><strong>Сырникова Б.А.</strong> – директор ГБУ «Научно-практический реабилитационный центр» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Меньшов В.А.</strong> – директор ГБУ ЦССВ «Наш дом» Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Понамарева И.Н.</strong> – директор ГБУ ЦСПСиД САО г. Москвы Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Еремичев А.В.</strong> – заместитель директора ГБУ МСППН Департамента труда и социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Сытникова Г.В.</strong> – председатель Территориальной Профсоюзной Организации учреждений социальной защиты населения города Москвы
+        <p class="promo__modal-paragraph"><strong>Соколова И.В.</strong> – начальник отдела проектного менеджмента ГБУ МСППН, секретарь организационного комитета 
     </div>
 
     <div id="totop">
@@ -280,9 +280,7 @@
     $('body,html').animate({scrollTop:0},700);
     });
     });
-    </script>
-
-    <script src="./vendor/revelator/fm.revealator.jquery.js"></script>
+</script>
 
 </body>
 </html>
