--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <div class="info__block-content">
                     <h2 class="info__block-title">Отборочный этап<span class="info__block-bage">онлайн</span></h2>
                     <p class="info__block-date">23.09.2020</p>
+                    <p class="info__block-date"><strong>11:00</strong></p>
                     <div class="info__block-area">
                         <div class="info__block-part">
                             <p class="info__block-subtitle">Подать заявку на участие</p>
@@ -234,7 +235,7 @@
 		var nextyear = month + '/' + day + '/' + year + ' 07:07:07';
 
 		$('#example').countdown({
-			date: '09/23/2020 10:00:00', // TODO Date format: 07/27/2017 17:00:00
+			date: '10/21/2020 10:00:00', // TODO Date format: 07/27/2017 17:00:00
 			offset: +3, // TODO Your Timezone Offset
 			day: 'день',
 			days: 'дней',
