--- a/index.html
+++ b/index.html
@@ -122,10 +122,8 @@
             </div>
         </section>
 
-        <!--<section class="media"></section>
-
-        <section class="partners"></section>-->
-
+        <!--<section class="media"></section>-->
+        
         <section id="_contacts" class="info__block">
             <img class="info__block-image" src="./images/info.svg" alt="Инфо" /> 
             <div class="info__block-content">
@@ -146,6 +144,28 @@
                         <a class="info__block-link info__block-link_space" href="./media/docs/condition_mos.pdf" target="_blank">Положение о конкурсе "Московские мастера"</a>
                         <a class="info__block-link" href="./media/docs/protocol.pdf" target="_blank">Протокол заседания организационного комитета конкурса "Московские мастера" по профессии "Психолог" от 08.09.20</a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="_partners" class="partners">
+            <h2 class="partners__title">Партнеры</h2>
+            <div class="partners__block">
+                <div class="partners__item">
+                    <img class="partners__image" src="./images/logos/dtszn.png" alt="ДТСЗН" />
+                    <p class="partners__paragraph">Департамент труда и социальной защиты населения города Москвы</p>
+                </div>
+                <div class="partners__item">
+                    <img class="partners__image" src="./images/logos/dogm.png" alt="ДОгМ" />
+                    <p class="partners__paragraph">Департамент образования и науки города Москвы</p>
+                </div>
+                <div class="partners__item">
+                    <img class="partners__image" src="./images/logos/dzm.png" alt="ДЗгМ" />
+                    <p class="partners__paragraph">Департамент здравоохранения города Москвы</p>
+                </div>
+                <div class="partners__item">
+                    <img class="partners__image" src="./images/logos/prof.png" alt="Профсоюзы" />
+                    <p class="partners__paragraph">Территориальная профсоюзная организация учреждений социальной защиты города Москвы</p>
                 </div>
             </div>
         </section>
