--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
+                    <li class="header__nav-item"><a class="header__nav-link" href="#_partners">Партнеры</a></li>
                 </ul>
                 <div class="menu">
                     <a class="menu-triger" href="#">
@@ -45,6 +46,7 @@
                             <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
+                            <li class="header__nav-item"><a class="header__nav-link" href="#_partners">Партнеры</a></li>
                         </ul>						
                     </div>
                 </div>
